1.Fix code to be compatible with BlackBerry SDK. 2.Add license files which come with original source.